增加阿里云oss 存储

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php": ">=7.2",
     "ext-json": "*",
     "ext-openssl": "*",
+    "ext-fileinfo": "*",
     "symfony/console": "^5.3.4"
   },
   "require-dev": {
