--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "php": ">=7.3",
     "ext-json": "*",
     "ext-openssl": "*",
-    "ext-fileinfo": "*",
-    "symfony/console": "^5.3.4"
+    "ext-fileinfo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
-    "illuminate/log": "^5.8|^6.0",
-    "aliyuncs/oss-sdk-php": "~2.4"
+    "illuminate/log": "*",
+    "aliyuncs/oss-sdk-php": "~2.4",
+    "symfony/console": "*"
   },
   "authors": [
     {
